Support for background-clip:content-box and padding-box with border-radius https://bugs.webkit.org/show_bug.cgi?id=23166

Patch by Vlad Grecescu  <igrecesc@adobe.com>, Douglas Stockwell <dstockwell@chromium.org> on 2012-10-15
Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/css/background-clip-radius-values.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::clipRoundedInnerRect):
(WebCore):
(WebCore::RenderBoxModelObject::paintFillLayerExtended):
* rendering/RenderBoxModelObject.h:

LayoutTests:

* fast/css/background-clip-radius-values-expected.png: Added.
* fast/css/background-clip-radius-values-expected.txt: Added.
* fast/css/background-clip-radius-values.html: Added.
* platform/chromium-linux/fast/css/background-clip-radius-values-expected.png: Added.
* platform/chromium-linux/ietestcenter/css3/bordersbackgrounds/border-radius-clip-002-expected.png:
* platform/chromium/TestExpectations:
* platform/mac/ietestcenter/css3/bordersbackgrounds/border-radius-clip-002-expected.png: Added.
* platform/qt/TestExpectations:
* platform/efl/TestExpectations:

Canonical link: https://commits.webkit.org/117367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131402 268f45cc-cd09-0410-ab3c-d52691b4dbfc